Отсортировать департаменты